--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -86,8 +86,8 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <div class="section-title">Welcome to Zinc web agency</div>
-                        <h1 class="h1-large">Zinc creates stylish and efficient sites</h1>
+                        <div class="section-title">Dein Digitaler Reiseplaner</div>
+                        <h1 class="h1-large">Erlebe dein Reiseziel anders</h1>
                         <p class="p-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, neque ut ultrices sollicitudin</p>
                         <a class="btn-solid-lg" href="#services">Offered services</a>
                         <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Get quote</a>
@@ -95,7 +95,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/header-illustration.svg" alt="alternative">
+                        <img class="img-fluid" style="width: 700px; height: auto;" src="images/header-illustration.svg" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -534,7 +534,9 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title">
-                                <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative"><span>Corporate site</span><img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alternative">
+                                <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative">
+                                <span>Corporate site</span>
+                                <img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alt">
                             </div>
                             <ul class="list-unstyled li-space-lg">
                                 <li>Nunc commodo magna quis</li>
