--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -37,7 +37,7 @@
         <div class="container">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> 
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/image.png" alt="alternative"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Zinc</a> -->
@@ -72,7 +72,7 @@
                     </li>
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-solid-sm" href="#contact">Get quote</a>
+                    <a class="btn-solid-sm shadow-button-purple" href="#contact">Probiers aus!</a>
                 </span>
             </div> <!-- end of navbar-collapse -->
         </div> <!-- end of container -->
@@ -89,7 +89,7 @@
                         <div class="section-title">Dein Digitaler Reiseplaner</div>
                         <h1 class="h1-large">Erlebe dein Reiseziel anders</h1>
                         <p class="p-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, neque ut ultrices sollicitudin</p>
-                        <a class="btn-solid-lg" href="#services">Offered services</a>
+                        <a class="btn-solid-lg shadow-button" href="#services">Probiers aus!</a>
                         <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Get quote</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -142,7 +142,7 @@
 
                     <!-- Card -->
                     <div class="card">
-                        <div class="card-icon yellow">
+                        <div class="card-icon blue">
                             <span class="fas fa-solar-panel"></span>
                         </div>
                         <div class="card-body">
@@ -172,7 +172,7 @@
 
                     <!-- Card -->
                     <div class="card">
-                        <div class="card-icon red">
+                        <div class="card-icon blue">
                             <span class="fas fa-gift"></span>
                         </div>
                         <div class="card-body">
@@ -221,7 +221,7 @@
                         <h2><span>Perfect solution</span><br> for your small business</h2>
                         <p>Maecenas fringilla quam posuere, pellentesque est nec, gravida turpis. Integer vitae mollis felis. Integer id quam id tellus hendrerit laciniad binfer</p>
                         <p>Sed id dui rutrum, dictum urna eu, accumsan turpis. Fusce id auctor velit, sed viverra dui rem dina</p>
-                        <a class="btn-solid-reg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a>
+                        <a class="btn-solid-reg shadow-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -294,7 +294,7 @@
                                 <div data-purecounter-start="0" data-purecounter-end="1250" data-purecounter-duration="2" class="purecounter">1</div>
                                 <div class="counter-info">Happy Customers</div>
                             </div> <!-- end of counter-cell -->
-                            <div class="counter-cell red">
+                            <div class="counter-cell " style="color: black">
                                 <div data-purecounter-start="0" data-purecounter-end="1380" data-purecounter-duration="2" class="purecounter">1</div>
                                 <div class="counter-info">Issues Solved</div>
                             </div> <!-- end of counter-cell -->
@@ -312,89 +312,6 @@
         </div> <!-- end of container -->
     </div> <!-- end of counter -->
     <!-- end of details 2 -->
-
-
-    <!-- Projects -->
-	<div id="projects" class="filter bg-gray">
-		<div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="h2-heading">Projects that we're proud of</h2>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    
-                    <!-- Filter -->
-                    <div class="button-group filters-button-group">
-                        <button class="button is-checked" data-filter="*">ALL</button>
-                        <button class="button" data-filter=".design">DESIGN</button>
-                        <button class="button" data-filter=".development">DEVELOPMENT</button>
-                        <button class="button" data-filter=".marketing">MARKETING</button>
-                    </div> <!-- end of button group -->
-                    <div class="grid">
-                        <div class="element-item development">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
-                                <p><strong>Online banking</strong> - pellentesque tincidunt leo eu laoreedt integer quis vanos compren</p>
-                            </a>
-                        </div>
-                        <div class="element-item development">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
-                                <p><strong>Loans company</strong> - odio semper, interdum orci molestie, mattis lectus pellentesq aliqu</p>
-                            </a>
-                        </div>
-                        <div class="element-item development">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
-                                <p><strong>Refinance firm</strong> - arcu a neque congue finibus doneci malesuada et purus melan bris</p>
-                            </a>
-                        </div>
-                        <div class="element-item design development">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-4.jpg" alt="alternative">
-                                <p><strong>Financial products</strong> - id aliquam ut malesuada eros utr varius blandit aliquam tinci bist</p>
-                            </a>
-                        </div>
-                        <div class="element-item design development">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-5.jpg" alt="alternative">
-                                <p><strong>Credit cards</strong> - magna a feugiat cras a semper tellus in rhoncus vehicula tellus rugo</p>
-                            </a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
-                                <p><strong>Software robots</strong> - vel sodales dolor donec a est sapien integer pharetr bilom conva</p>
-                            </a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
-                                <p><strong>Company control</strong> - ut quam aliquam elemo de vestibulum fringilla porttitor vanic tres</p>
-                            </a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-8.jpg" alt="alternative">
-                                <p><strong>Audit reports</strong> - sed tempor, metus vel pharetra finibus, est ante hendrerit augue</p>
-                            </a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a href="article.html">
-                                <img class="img-fluid" src="images/project-9.jpg" alt="alternative">
-                                <p><strong>Big business</strong> - aliquam semper molestie nisi, at porttitor lacus suscipit in mole richter</p>
-                            </a>
-                        </div>
-                    </div> <!-- end of grid -->
-                    <!-- end of filter -->
-                    
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-		</div> <!-- end of container -->
-    </div> <!-- end of filter -->
-    <!-- end of projects -->
 
 
     <!-- Testimonials -->
@@ -698,13 +615,13 @@
             <div class="row">
                 <div class="col-lg-6">
                     <ul class="list-unstyled li-space-lg p-small">
-                        <li><a href="article.html">Article Details</a></li>
-                        <li><a href="terms.html">Terms & Conditions</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="article.html" style="color: black;">Article Details</a></li>
+                        <li><a href="terms.html" style="color: black">Terms & Conditions</a></li>
+                        <li><a href="privacy.html" style="color: black;">Privacy Policy</a></li>
                     </ul>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
-                    <p class="p-small statement">Copyright © <a href="#">Your name</a></p>
+                    <p class="p-small statement" style="color: black">Copyright © <a href="/" style="color: black;">Tourisfair</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
