--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -42,8 +42,8 @@
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Zinc</a> -->
 
-            <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation" style="color: black">
+                <span class="navbar-toggler-icon" style="color: black"></span>
             </button>
 
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
@@ -89,7 +89,7 @@
                         <div class="section-title">Dein Digitaler Reiseplaner</div>
                         <h1 class="h1-large">Erlebe dein Reiseziel anders</h1>
                         <p class="p-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, neque ut ultrices sollicitudin</p>
-                        <a class="btn-solid-lg shadow-button" href="#services">Probiers aus!</a>
+                        <a class="btn-solid-lg shadow-button" href="https://tourisfair.de">Probiers aus!</a>
                         <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Get quote</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -504,15 +504,14 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h4>In gravida at nunc sodales pretium. Vivamus semper, odio vitae mattis auctor, elit elit semper magna rico</h4>
-                        <p class="p-large">Ac tristique velit sapien vitae eros. Praesent ut erat a tellus cursus pharetra finibus posuere nisi. Vivamus feugiat tincidunt sem pre toro</p>
+                        <h4>Registriere dich für unseren Newsletter</h4>
+                        <p class="p-large">Erfahre die neusten News rundum Tourisfair, Updates, Blog Posts und mehr</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of basic-2 -->
     <!-- end of invitation -->
-
 
     <!-- Contact -->
     <div id="contact" class="form-1">
@@ -551,7 +550,7 @@
                             <textarea class="form-control-textarea" placeholder="Message" required></textarea>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="form-control-submit-button">Submit</button>
+                            <button type="submit" class="form-control-submit-button shadow-button">Submit</button>
                         </div>
                     </form>
                     <!-- end of contact form -->
@@ -633,6 +632,22 @@
     <button onclick="topFunction()" id="myBtn">
         <img src="images/up-arrow.png" alt="alternative">
     </button>
+
+    <!-- <script>
+        var swiper = new Swiper('.blog-slider', {
+      spaceBetween: 30,
+      effect: 'fade',
+      loop: true,
+      mousewheel: {
+        invert: false,
+      },
+      // autoHeight: true,
+      pagination: {
+        el: '.blog-slider__pagination',
+        clickable: true,
+      }
+    });
+    </script> -->
     <!-- end of back to top button -->
     	
     <!-- Scripts -->
