--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -52,13 +52,13 @@
                         <a class="nav-link active" aria-current="page" href="#header">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="#details">What Is TourisFair?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
+                        <a class="nav-link" href="#pricing">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pricing">Pricing</a>
+                        <a class="nav-link" href="#services">Blog</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Drop</a>
@@ -90,7 +90,7 @@
                         <h1 class="h1-large">Erlebe dein Reiseziel anders</h1>
                         <p class="p-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, neque ut ultrices sollicitudin</p>
                         <a class="btn-solid-lg shadow-button" href="https://tourisfair.de">Probiers aus!</a>
-                        <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Get quote</a>
+                        <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Kontaktiere uns!</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
@@ -102,6 +102,28 @@
         </div> <!-- end of container -->
     </header> <!-- end of header -->
     <!-- end of header -->
+
+    <!-- Details 1 -->
+    <div id="details" class="basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-xl-7">
+                    <div class="image-container">
+                        <img class="img-fluid" src="images/details-1.svg" alt="alternative">
+                    </div> <!-- end of image-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-6 col-xl-5">
+                    <div class="text-container">
+                        <h2><span>Perfect solution</span><br> for your small business</h2>
+                        <p>Maecenas fringilla quam posuere, pellentesque est nec, gravida turpis. Integer vitae mollis felis. Integer id quam id tellus hendrerit laciniad binfer</p>
+                        <p>Sed id dui rutrum, dictum urna eu, accumsan turpis. Fusce id auctor velit, sed viverra dui rem dina</p>
+                        <a class="btn-solid-reg shadow-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Erfahre mehr</a>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-1 -->
+    <!-- end of details 1 -->
 
 
     <!-- Services -->
@@ -207,27 +229,7 @@
     <!-- end of services -->
 
 
-    <!-- Details 1 -->
-    <div id="details" class="basic-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-xl-7">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/details-1.svg" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-6 col-xl-5">
-                    <div class="text-container">
-                        <h2><span>Perfect solution</span><br> for your small business</h2>
-                        <p>Maecenas fringilla quam posuere, pellentesque est nec, gravida turpis. Integer vitae mollis felis. Integer id quam id tellus hendrerit laciniad binfer</p>
-                        <p>Sed id dui rutrum, dictum urna eu, accumsan turpis. Fusce id auctor velit, sed viverra dui rem dina</p>
-                        <a class="btn-solid-reg shadow-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-1 -->
-    <!-- end of details 1 -->
+    
 
 
     <!-- Details Modal -->
@@ -269,8 +271,8 @@
                                 <div class="flex-grow-1">Id ultricies fringilla fangor raq trinit</div>
                             </li>
                         </ul>
-                        <a id="modalCtaBtn" class="btn-solid-reg" href="#">Details</a>
-                        <button type="button" class="btn-outline-reg" data-bs-dismiss="modal">Close</button>
+                        <a id="modalCtaBtn" class="btn-solid-reg shadow-button" href="https://tourisfair.de">Probiers aus!</a>
+                        <button type="button" class="btn-outline-reg close-button" data-bs-dismiss="modal" style="border-color: black; color: black">Close</button>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
             </div> <!-- end of modal-content -->
