--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Zinc Webpage Title</title>
+    <title>TourisFair - Digitaler Reisebegleiter</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
@@ -52,7 +52,7 @@
                         <a class="nav-link active" aria-current="page" href="#header">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#details">What Is TourisFair?</a>
+                        <a class="nav-link" href="#details">Was ist TourisFair?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#pricing">Team</a>
@@ -529,7 +529,6 @@
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
-            <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     
                     <!-- Contact Form -->
