--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -508,12 +508,65 @@
                     <div class="text-container">
                         <h4>Registriere dich für unseren Newsletter</h4>
                         <p class="p-large">Erfahre die neusten News rundum Tourisfair, Updates, Blog Posts und mehr</p>
+                        <br>
+                        <div class="subscribe-wrapper">
+                                    <form action="#" class="subscribe-form wow fadeInUp" data-wow-delay=".6s">
+                                        <input type="email" name="subs-email" id="subs-email" placeholder="Your email">
+                                        <button type="submit" class="main-btn btn-hover">Jetzt Registrieren</button>
+                                    </form>
+                            </div>
+                        </div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of basic-2 -->
     <!-- end of invitation -->
+
+        <!-- Projects -->
+        <div id="projects" class="cards-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="h2-heading">Neues von unserem Blogs</h2>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <!-- Card -->
+                        <div class="card" style="border-color: transparent;">
+                            <img class="img-fluid" src="images/project-1.jpg" alt="alternative" style="border-radius: 20px;">
+                            <div class="card-body">
+                                <h5 class="card-title">Office space for banking</h5>
+                                <p class="card-text">Suffer should if waited common person little ans words are needed ohscsdcd <a class="blue no-line" href="article.html">...Read more</a></p>
+                            </div>
+                        </div>
+                        <!-- end of card -->
+    
+                        <!-- Card -->
+                        <div class="card" style="border-color: transparent;">
+                            <img class="img-fluid" src="images/project-2.jpg" alt="alternative" style="border-radius: 20px;">
+                            <div class="card-body">
+                                <h5 class="card-title">Planning and design for startup</h5>
+                                <p class="card-text">In to am attended desirous raptures declared diverted confined at collected <a class="blue no-line" href="article.html">...Read more</a></p>
+                            </div>
+                        </div>
+                        <!-- end of card -->
+    
+                        <!-- Card -->
+                        <div class="card" style="border-color: transparent;">
+                            <img class="img-fluid" src="images/project-3.jpg" alt="alternative" style="border-radius: 20px;">
+                            <div class="card-body">
+                                <h5 class="card-title">Colors and materials update</h5>
+                                <p class="card-text">Instantly remaining up certainly to necessary as over walk dull into son <a class="blue no-line" href="article.html">...Read more</a></p>
+                            </div>
+                        </div>
+                        <!-- end of card -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of cards-2 -->
+        <!-- end of projects -->
 
     <!-- Contact -->
     <div id="contact" class="form-1">
