--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -90,7 +90,7 @@
                         <h1 class="h1-large">Erlebe dein Reiseziel anders</h1>
                         <p class="p-large">Tourisfair zielt darauf ab, das Reiseerlebnis für dich zu optimieren, um das Beste aus ihrer Reise herauszuholen und glücklich und zufrieden nach Hause zurückzukehren.</p>
                         <a class="btn-solid-lg shadow-button" href="https://tourisfair.de">Probiers aus!</a>
-                        <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Kontaktiere uns!</a>
+                        <a class="quote" href="mailto:info@tourisfair.de"><i class="fas fa-paper-plane"></i>Kontaktiere uns!</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7" data-aos="fade-left" data-aos-duration="1500">
