--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -61,13 +61,13 @@
                         <a class="nav-link" href="#services">Blog</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Drop</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Mehr</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="article.html">Article Details</a></li>
+                            <li><a class="dropdown-item" href="article.html" style="color: black">Impressum</a></li>
                             <li><div class="dropdown-divider"></div></li>
-                            <li><a class="dropdown-item" href="terms.html">Terms Conditions</a></li>
+                            <li><a class="dropdown-item" href="terms.html" style="color: black">AGB's</a></li>
                             <li><div class="dropdown-divider"></div></li>
-                            <li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
+                            <li><a class="dropdown-item" href="privacy.html" style="color: black">Datenschutz</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -542,9 +542,10 @@
             <div class="row">
                 <div class="col-lg-6">
                     <ul class="list-unstyled li-space-lg p-small">
-                        <li><a href="article.html" style="color: black;">Contact Us</a></li>
-                        <li><a href="terms.html" style="color: black">Terms & Conditions</a></li>
-                        <li><a href="privacy.html" style="color: black;">Privacy Policy</a></li>
+                        <li><a href="mailto:info@tourisfair.de" style="color: black;">Kontaktiere Uns</a></li>
+                        <li><a href="terms.html" style="color: black">AGB's</a></li>
+                        <li><a href="privacy.html" style="color: black;">Datenschutz</a></li>
+                        <li><a href="privacy.html" style="color: black;">Impressum</a></li>
                     </ul>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
