--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -37,7 +37,7 @@
     <nav id="navbarExample" class="navbar navbar-expand-lg fixed-top navbar-light" aria-label="Main navigation">
         <div class="container">
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/image.png" alt="alternative"></a> 
+            <a class="navbar-brand logo-image" href="/"><img src="images/image.png" alt="alternative"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Zinc</a> -->
@@ -49,7 +49,7 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ms-auto navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#header">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#details">Was ist TourisFair?</a>
@@ -422,8 +422,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h4>Registriere dich für unseren Newsletter</h4>
-                        <p class="p-large">Erfahre die neusten News rundum Tourisfair, Updates, Blog Posts und mehr</p>
+                        <h4>Registriere dich für unseren Newsletter
+                            <p style="color: white">Erfahre die neusten News rundum Tourisfair, Updates, Blog Posts und mehr</p>
+                        </h4>
                         <br>
                         <div class="subscribe-wrapper">
                                     <form action="#" class="subscribe-form wow fadeInUp" data-wow-delay=".6s">
