--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -52,18 +52,18 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#details">Was ist TourisFair?</a>
+                        <a class="nav-link" href="/#details">Was ist TourisFair?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pricing">Team</a>
+                        <a class="nav-link" href="/#testimonials">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Blog</a>
+                        <a class="nav-link" href="/#projects">Blog</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Mehr</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="article.html" style="color: black">Impressum</a></li>
+                            <li><a class="dropdown-item" href="impressum.html" style="color: black">Impressum</a></li>
                             <li><div class="dropdown-divider"></div></li>
                             <li><a class="dropdown-item" href="terms.html" style="color: black">AGB's</a></li>
                             <li><div class="dropdown-divider"></div></li>
@@ -317,7 +317,7 @@
 
 
     <!-- Testimonials -->
-    <div class="slider-1">
+    <div class="slider-1" id="testimonials">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -457,7 +457,7 @@
                             <br>
                             <div class="card-body">
                                 <h5 class="">Where are Germans travelling after Corona?</h5>
-                                <p class="">Wohin wollen die Deutschen nach Corona reisen? Doch diese Frage zieht noch einige weitere Fragen nach sich, wie zum Beispiel: „Wird es eine Zeit nach Corona geben?“ <a class="blue no-line" href="article.html">...Read more</a></p>
+                                <p class="">Wohin wollen die Deutschen nach Corona reisen? Doch diese Frage zieht noch einige weitere Fragen nach sich, wie zum Beispiel: „Wird es eine Zeit nach Corona geben?“ <a class="blue no-line" href="https://tourisfair.de/where-are-germans-travelling-after-corona/">...Read more</a></p>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -469,7 +469,7 @@
                             <br>
                             <div class="card-body">
                                 <h5 class="">Schätze Deutschlands</h5>
-                                <p class="">Was sind Gems of Germany? Hier nun eine kurze Erklärung. Diese sogenannten „Edelsteine“ sind Sehenswürdigkeiten bzw. Ausflugsziele, die meist noch nicht mal jeder Deutsche kennt. <a class="blue no-line" href="article.html">...Read more</a></p>
+                                <p class="">Was sind Gems of Germany? Hier nun eine kurze Erklärung. Diese sogenannten „Edelsteine“ sind Sehenswürdigkeiten bzw. Ausflugsziele, die meist noch nicht mal jeder Deutsche kennt. <a class="blue no-line" href="https://tourisfair.de/gems-of-germany/">...Read more</a></p>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -481,7 +481,7 @@
                             <br>
                             <div class="card-body">
                                 <h5 class="">Colors and materials update</h5>
-                                <p class="">Instantly remaining up certainly to necessary as over walk dull into son <a class="blue no-line" href="article.html">...Read more</a></p>
+                                <p class="">Instantly remaining up certainly to necessary as over walk dull into son <a class="blue no-line" href="/">...Read more</a></p>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -546,11 +546,11 @@
                         <li><a href="mailto:info@tourisfair.de" style="color: black;">Kontaktiere Uns</a></li>
                         <li><a href="terms.html" style="color: black">AGB's</a></li>
                         <li><a href="privacy.html" style="color: black;">Datenschutz</a></li>
-                        <li><a href="privacy.html" style="color: black;">Impressum</a></li>
+                        <li><a href="impressum.html" style="color: black;">Impressum</a></li>
                     </ul>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
-                    <p class="p-small statement" style="color: black">Copyright © <a href="/" style="color: black;">Tourisfair</a></p>
+                    <p class="p-small statement" style="color: black">Copyright © <a href="/" style="color: black;">Tourisfair 2021</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
