--- a/landingpage/web/terms.html
+++ b/landingpage/web/terms.html
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h1>Allgemeine Geschäftsbedingungen</h1>
+                    <h1>AGB's</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
