--- a/landingpage/web/impressum.html
+++ b/landingpage/web/impressum.html
@@ -112,7 +112,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h4>Pellentesque aliquet mi eu tortor dictum, non imperdiet ante viverra. Phasellus eget enim orci ut pellentes troc</h4>
+                    <h4>Folge uns auf den Sozialen Medien um auf den Laufenden zu bleiben.</h4>
                     <div class="social-container">
                         <span class="fa-stack">
                             <a href="#your-link">
@@ -158,13 +158,14 @@
             <div class="row">
                 <div class="col-lg-6">
                     <ul class="list-unstyled li-space-lg p-small">
-                        <li><a href="article.html">Article Details</a></li>
-                        <li><a href="terms.html">Terms & Conditions</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="mailto:info@tourisfair.de" style="color: black;">Kontaktiere Uns</a></li>
+                        <li><a href="terms.html" style="color: black">AGB's</a></li>
+                        <li><a href="privacy.html" style="color: black;">Datenschutz</a></li>
+                        <li><a href="impressum.html" style="color: black;">Impressum</a></li>
                     </ul>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
-                    <p class="p-small statement">Copyright © <a href="#">Your name</a></p>
+                    <p class="p-small statement" style="color: black">Copyright © <a href="/" style="color: black;">Tourisfair 2021</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
