--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -332,12 +332,12 @@
                                     <div class="card">
                                         <img class="quotes" src="images/quotes.svg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Fusce tincidunt dui nec diam varius venenatis. Nullam tristique rutrum odio, ut tincidunt erat dictum in. Etiam et aliquet mi, et vehicula elit fusce porta ullamcorper</p>
+                                            <p class="testimonial-text">Ich war 2 Tage lang in Paris und wusste nicht was tun soll! Ich fand TourisFair und hatte sofort ne Liste an Aktivitäten dich ich besuchen kann!</p>
                                             <div class="details">
                                                 <img class="testimonial-image" src="images/testimonial-1.jpg" alt="alternative">
                                                 <div class="text">
                                                     <div class="testimonial-author">Samantha Bloom</div>
-                                                    <div class="occupation">Team Leader - Syncnow</div>
+                                                    <div class="occupation">Unternehmensberaterin</div>
                                                 </div> <!-- end of text -->
                                             </div> <!-- end of testimonial-details -->
                                         </div>
@@ -350,12 +350,12 @@
                                     <div class="card">
                                         <img class="quotes" src="images/quotes.svg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Mauris ut mattis nisl. Nunc ultrices nisi eget nisl pulvinar iaculis vitae ac nulla. Nullam fringilla varius blandit. Nam sit amet eleifend justo blogo rovan de chichis kokos venir dab</p>
+                                            <p class="testimonial-text">Ich habe eine Reise nach Berlin geplant und hatte keine Ahnung was ich besuchen kann! Durch TourisFair konnte ich nicht nur Zeit sparen sondern hatte auch eine mega schöne Zeit!</p>
                                             <div class="details">
                                                 <img class="testimonial-image" src="images/testimonial-2.jpg" alt="alternative">
                                                 <div class="text">
-                                                    <div class="testimonial-author">Mike Page</div>
-                                                    <div class="occupation">Developer - Chainlink</div>
+                                                    <div class="testimonial-author">Thomas Schmidt</div>
+                                                    <div class="occupation">Student in Frankfurt</div>
                                                 </div> <!-- end of text -->
                                             </div> <!-- end of testimonial-details -->
                                         </div>
@@ -368,12 +368,12 @@
                                     <div class="card">
                                         <img class="quotes" src="images/quotes.svg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Nam sit amet eleifend justo. Aliquam sit amet lacinia enim, eget facilisis ex. Ut pretium cursus eleifend. Integer feugiat malesuada quam vel basil venis proca jilo</p>
+                                            <p class="testimonial-text">Ich lebe seit langem in Hamburg und hatte keine Ahnung was für tolle Sehenswürdigkeiten es hier gibt! Weiter So!</p>
                                             <div class="details">
                                                 <img class="testimonial-image" src="images/testimonial-3.jpg" alt="alternative">
                                                 <div class="text">
-                                                    <div class="testimonial-author">Mary Longhorn</div>
-                                                    <div class="occupation">Manager - Firstdev</div>
+                                                    <div class="testimonial-author">Mary Langhorn</div>
+                                                    <div class="occupation">Anwältin</div>
                                                 </div> <!-- end of text -->
                                             </div> <!-- end of testimonial-details -->
                                         </div>
@@ -386,12 +386,12 @@
                                     <div class="card">
                                         <img class="quotes" src="images/quotes.svg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Lorem ipsum dolor sit amet, consectetur ing elit. Nulla id nisl tempus risus facilisis efficr ut tincidunt vitae enim non vehicula. Phases vitae metus in felis gravida ultrices zimbo</p>
+                                            <p class="testimonial-text">TourisFair ist für junge und alte, für alle die verkrampft versuchen eine geile Reise planen. Go TourisFair</p>
                                             <div class="details">
                                                 <img class="testimonial-image" src="images/testimonial-4.jpg" alt="alternative">
                                                 <div class="text">
                                                     <div class="testimonial-author">Ronny Drummer</div>
-                                                    <div class="occupation">Designer - Sawdust</div>
+                                                    <div class="occupation">Designer</div>
                                                 </div> <!-- end of text -->
                                             </div> <!-- end of testimonial-details -->
                                         </div>
