--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -355,7 +355,7 @@
                                                 <img class="testimonial-image" src="images/testimonial-2.jpg" alt="alternative">
                                                 <div class="text">
                                                     <div class="testimonial-author">Thomas Schmidt</div>
-                                                    <div class="occupation">Student in Frankfurt</div>
+                                                    <div class="occupation">Student</div>
                                                 </div> <!-- end of text -->
                                             </div> <!-- end of testimonial-details -->
                                         </div>
