--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -52,7 +52,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#details">Was ist TourisFair?</a>
+                        <a class="nav-link" href="/#details">Was ist Tourisfair?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/#testimonials">Testimonials</a>
