--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -72,7 +72,7 @@
                     </li>
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-solid-sm shadow-button-purple" href="#contact">Probiers aus!</a>
+                    <a class="btn-solid-sm shadow-button-purple" href="https://tourisfair.de">Probiers aus!</a>
                 </span>
             </div> <!-- end of navbar-collapse -->
         </div> <!-- end of container -->
