--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5" data-aos="fade-right" data-aos-duration="1500">
                     <div class="text-container">
-                        <div class="section-title">Dein Digitaler Reiseplaner</div>
+                        <div class="section-title" style="background-color: #000000;">Dein Digitaler Reiseplaner</div>
                         <h1 class="h1-large">Erlebe dein Reiseziel anders</h1>
                         <p class="p-large">Tourisfair zielt darauf ab, das Reiseerlebnis für dich zu optimieren, um das Beste aus ihrer Reise herauszuholen und glücklich und zufrieden nach Hause zurückzukehren.</p>
                         <a class="btn-solid-lg shadow-button" href="https://tourisfair.de">Probiers aus!</a>
