--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -459,7 +459,7 @@
                             <br>
                             <div class="card-body">
                                 <h5 class="">Where are Germans travelling after Corona?</h5>
-                                <p class="">Wohin wollen die Deutschen nach Corona reisen? Doch diese Frage zieht noch einige weitere Fragen nach sich, wie zum Beispiel: „Wird es eine Zeit nach Corona geben?“ <a class="blue no-line" href="https://tourisfair.de/where-are-germans-travelling-after-corona/">...Read more</a></p>
+                                <p class="">Wohin wollen die Deutschen nach Corona reisen? Doch diese Frage zieht noch einige weitere Fragen nach sich, wie zum Beispiel: „Wird es eine Zeit nach Corona geben?“ <a class="blue no-line" href="https://blog.tourisfair.de/where-are-germans-travelling-after-corona/">...Read more</a></p>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -471,7 +471,7 @@
                             <br>
                             <div class="card-body">
                                 <h5 class="">Schätze Deutschlands</h5>
-                                <p class="">Was sind Gems of Germany? Hier nun eine kurze Erklärung. Diese sogenannten „Edelsteine“ sind Sehenswürdigkeiten bzw. Ausflugsziele, die meist noch nicht mal jeder Deutsche kennt. <a class="blue no-line" href="https://tourisfair.de/gems-of-germany/">...Read more</a></p>
+                                <p class="">Was sind Gems of Germany? Hier nun eine kurze Erklärung. Diese sogenannten „Edelsteine“ sind Sehenswürdigkeiten bzw. Ausflugsziele, die meist noch nicht mal jeder Deutsche kennt. <a class="blue no-line" href="https://blog.tourisfair.de/gems-of-germany/">...Read more</a></p>
                             </div>
                         </div>
                         <!-- end of card -->
