--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -67,17 +67,15 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
                             aria-expanded="false">Mehr</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="impressum.html" style="color: black">Impressum</a></li>
-                            <li>
-                                <div class="dropdown-divider"></div>
-                            </li>
-                            <li><a class="dropdown-item" href="terms.html" style="color: black">AGB's</a></li>
-                            <li>
-                                <div class="dropdown-divider"></div>
-                            </li>
-                            <li><a class="dropdown-item" href="privacy.html" style="color: black">Datenschutz</a></li>
-                        </ul>
+                            <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                                <li><a class="dropdown-item" href="about-us.html" style="color: black">Über Uns</a></li>
+                                <li><div class="dropdown-divider"></div></li>
+                                <li><a class="dropdown-item" href="impressum.html" style="color: black">Impressum</a></li>
+                                <li><div class="dropdown-divider"></div></li>
+                                <li><a class="dropdown-item" href="terms.html" style="color: black">AGB's</a></li>
+                                <li><div class="dropdown-divider"></div></li>
+                                <li><a class="dropdown-item" href="privacy.html" style="color: black">Datenschutz</a></li>
+                            </ul>
                     </li>
                 </ul>
                 <span class="nav-item">
