--- a/landingpage/web/privacy.html
+++ b/landingpage/web/privacy.html
@@ -74,7 +74,7 @@
 				>
 					<ul class="navbar-nav ms-auto navbar-nav-scroll">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="/">Home</a>
+							<a class="nav-link" aria-current="page" href="/">Home</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/#details">Was ist TourisFair?</a>
@@ -87,7 +87,7 @@
 						</li>
 						<li class="nav-item dropdown">
 							<a
-								class="nav-link dropdown-toggle"
+								class="nav-link dropdown-toggle active"
 								href="#"
 								id="dropdown01"
 								data-bs-toggle="dropdown"
@@ -95,32 +95,13 @@
 								>Mehr</a
 							>
 							<ul class="dropdown-menu" aria-labelledby="dropdown01">
-								<li>
-									<a
-										class="dropdown-item"
-										href="impressum.html"
-										style="color: black"
-										>Impressum</a
-									>
-								</li>
+								<li><a class="dropdown-item" href="about-us.html" style="color: black">Über Uns</a></li>
 								<li><div class="dropdown-divider"></div></li>
-								<li>
-									<a
-										class="dropdown-item"
-										href="terms.html"
-										style="color: black"
-										>AGB's</a
-									>
-								</li>
+								<li><a class="dropdown-item" href="impressum.html" style="color: black">Impressum</a></li>
 								<li><div class="dropdown-divider"></div></li>
-								<li>
-									<a
-										class="dropdown-item"
-										href="privacy.html"
-										style="color: black"
-										>Datenschutz</a
-									>
-								</li>
+								<li><a class="dropdown-item" href="terms.html" style="color: black">AGB's</a></li>
+								<li><div class="dropdown-divider"></div></li>
+								<li><a class="dropdown-item" href="privacy.html" style="color: black">Datenschutz</a></li>
 							</ul>
 						</li>
 					</ul>
