--- a/landingpage/web/terms.html
+++ b/landingpage/web/terms.html
@@ -48,7 +48,7 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ms-auto navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/#details">Was ist TourisFair?</a>
@@ -60,8 +60,10 @@
                         <a class="nav-link" href="/#projects">Blog</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Mehr</a>
+                        <a class="nav-link dropdown-toggle active" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Mehr</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                            <li><a class="dropdown-item" href="about-us.html" style="color: black">Über Uns</a></li>
+                            <li><div class="dropdown-divider"></div></li>
                             <li><a class="dropdown-item" href="impressum.html" style="color: black">Impressum</a></li>
                             <li><div class="dropdown-divider"></div></li>
                             <li><a class="dropdown-item" href="terms.html" style="color: black">AGB's</a></li>
