add line breaks

--- a/landingpage/web/about-us.html
+++ b/landingpage/web/about-us.html
@@ -285,6 +285,8 @@
                                                     style="border-radius: 45px;"
                                                     width="400"
 												/>
+												<br>
+												<br>
 											</div>
 											<!-- end of image-container -->
 										</div>
@@ -328,7 +330,8 @@
                                                 </h4>
                                                 Mit mehr als 30 Jahren als Programmierer und 20 Jahren in der IT-Beratung in verschiedenen Branchen und Dienstleistungssektoren hat Nizar ein tiefes Verständnis für aktuelle Technologien und kommende Trends. Blockchain, Machine Learning, Big Data, IoT, Cloud und Webservices sind alles Schlagworte, die unendliche Innovationsmöglichkeiten für fast alle Lebensbereiche eröffnen. Sein Ziel bei Tourisfair ist es, lokalen, regionalen und internationalen Tourismusakteuren und Aktivitätsanbietern datenorientierte Dienstleistungen anzubieten.
                                             </p>
-                                            <a href="https://www.linkedin.com/in/nizarayed/" class="btn-solid-sm shadow-button" >Connect &nbsp;&nbsp; <i class="fab fa-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/nizarayed/" class="btn-solid-sm shadow-button" >Connect &nbsp;&nbsp; <i class="fab fa-linkedin"></i></a> <br>
+											<br>
                                         </div>
                                     </div>
                                     <!-- end of col -->
