Added Google analytics information

--- a/landingpage/web/about-us.html
+++ b/landingpage/web/about-us.html
@@ -12,23 +12,23 @@
 		<meta name="author" content="Your name" />
 
 		<!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-		<meta property="og:site_name" content="" />
+		<meta property="og:site_name" content="Tourisfair" />
 		<!-- website name -->
-		<meta property="og:site" content="" />
+		<meta property="og:site" content="https://tourisfair.de" />
 		<!-- website link -->
-		<meta property="og:title" content="" />
+		<meta property="og:title" content="About us" />
 		<!-- title shown in the actual shared post -->
-		<meta property="og:description" content="" />
+		<meta property="og:description" content="The founding team of Tourisfair" />
 		<!-- description shown in the actual shared post -->
 		<meta property="og:image" content="" />
 		<!-- image link, make sure it's jpg -->
-		<meta property="og:url" content="" />
+		<meta property="og:url" content="https://tourisfair.de/about-us.html" />
 		<!-- where do you want your post to link to -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<!-- to have large image post format in Twitter -->
 
 		<!-- Webpage Title -->
-		<title>Impressum - TourisFair</title>
+		<title>Über Uns - TourisFair</title>
 
 		<!-- Styles -->
 		<link
@@ -42,6 +42,15 @@
 
 		<!-- Favicon  -->
 		<link rel="icon" href="images/favicon.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MR0DBYF0P1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MR0DBYF0P1');
+    </script>
 	</head>
 	<body>
 		<!-- Navigation -->
@@ -295,7 +304,7 @@
 											<div class="text-container">
 												<h4>
 													<span>Gustavo Ortega Geschwindt</span><br />
-													<p>Generaldirektor</p> 
+													<p>Generaldirektor</p>
 												</h4>
                                                 Im Alter von 12 Jahren beschlossen Gustavo und seine Familie, von Peru nach Deutschland zu ziehen und haben seitdem nicht aufgehört, neue Orte und Kulturen kennenzulernen. Seine Mission bei Tourisfair besteht nicht nur darin, exzellenten Service zu bieten, sondern sich darum zu bemühen, Tourisfair in einer warmen und futuristischen Arbeitsumgebung zu verbessern, um Ihnen, dem Reisenden, den besten Planungsservice aller Zeiten zu bieten.
 												</p>
