--- a/landingpage/web/impressum.html
+++ b/landingpage/web/impressum.html
@@ -25,10 +25,19 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <link href="css/swiper.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">
+  	<link href="css/styles.css" rel="stylesheet">
 	
-	<!-- Favicon  -->
+	  <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MR0DBYF0P1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MR0DBYF0P1');
+    </script>
 </head>
 <body>
     
