--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -32,6 +32,15 @@
 
     <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MR0DBYF0P1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MR0DBYF0P1');
+    </script>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbarExample">
