--- a/landingpage/web/privacy.html
+++ b/landingpage/web/privacy.html
@@ -42,6 +42,15 @@
 
 		<!-- Favicon  -->
 		<link rel="icon" href="images/favicon.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MR0DBYF0P1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MR0DBYF0P1');
+    </script>
 	</head>
 	<body>
 		<!-- Navigation -->
