Corrected the name of Gustavo on About us page

--- a/landingpage/web/about-us.html
+++ b/landingpage/web/about-us.html
@@ -303,7 +303,7 @@
 										<div class="col-lg-6 col-xl-5">
 											<div class="text-container">
 												<h4>
-													<span>Gustavo Ortega Geschwindt</span><br />
+													<span>Gustavo Ortega Schwindt</span><br />
 													<p>Generaldirektor</p>
 												</h4>
                                                 Im Alter von 12 Jahren beschlossen Gustavo und seine Familie, von Peru nach Deutschland zu ziehen und haben seitdem nicht aufgehört, neue Orte und Kulturen kennenzulernen. Seine Mission bei Tourisfair besteht nicht nur darin, exzellenten Service zu bieten, sondern sich darum zu bemühen, Tourisfair in einer warmen und futuristischen Arbeitsumgebung zu verbessern, um Ihnen, dem Reisenden, den besten Planungsservice aller Zeiten zu bieten.
