Modified 3rd card for blog article on Medium

--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -545,13 +545,14 @@
 
                     <!-- Card -->
                     <div class="card" style="border-color: transparent;">
-                        <img class="img-fluid" src="images/project-3.jpg" alt="alternative"
+                        <img class="img-fluid" src="https://miro.medium.com/max/1400/1*mPdQekjNxxhSYcUgq6Bq7A.jpeg" alt="Kopenhagen"
                             style="border-radius: 20px;">
                         <br>
+                        <center><small>Daniel Hischer 📸</small></center>
                         <br>
                         <div class="card-body">
-                            <h5 class="">Colors and materials update</h5>
-                            <p class="">Instantly remaining up certainly to necessary as over walk dull into son <a
+                            <h5 class="">Die lebenswerteste Metropole der Welt — Kopenhagen</h5>
+                            <p class="">Kopenhagen ist eine dieser Städte, die fast wie eine Kleinstadt anmutet, aber mit einer Lebendigkeit, die jeder anderen europäischen Großstadt in nichts nachsteht.<a
                                     class="blue no-line" href="/">...Read more</a></p>
                         </div>
                     </div>
