--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -107,7 +107,7 @@
                         <div class="section-title">Dein Digitaler Reiseplaner</div>
                         <h1 class="h1-large">Erlebe dein Reiseziel anders</h1>
                         <p class="p-large">Tourisfair zielt darauf ab, das Reiseerlebnis für dich zu optimieren, um das
-                            Beste aus ihrer Reise herauszuholen und glücklich und zufrieden nach Hause zurückzukehren.
+                            Beste aus deiner Reise herauszuholen und glücklich und zufrieden nach Hause zurückzukehren.
                         </p>
                         <a class="btn-solid-lg shadow-button" href="https://app.tourisfair.de" target=”_blank”>Probiers
                             aus!</a>
