--- a/landingpage/web/index.html
+++ b/landingpage/web/index.html
@@ -553,7 +553,7 @@
                         <div class="card-body">
                             <h5 class="">Die lebenswerteste Metropole der Welt — Kopenhagen</h5>
                             <p class="">Kopenhagen ist eine dieser Städte, die fast wie eine Kleinstadt anmutet, aber mit einer Lebendigkeit, die jeder anderen europäischen Großstadt in nichts nachsteht.<a
-                                    class="blue no-line" href="/">...Read more</a></p>
+                                    class="blue no-line" href="https://tourisfair.medium.com/die-lebenswerteste-metropole-der-welt-kopenhagen-bdf40bb84b37">...Read more</a></p>
                         </div>
                     </div>
                     <!-- end of card -->
